--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <h1>ATTACK ON TITAN</h1>
 <ul>
   <li><a href="myWebsite.html">Home</a></li>
-  <li><a href="resume.html">Resume</a></li>
+  <li><a href="homepage.html">weather</a></li>
   <li><a href="theWalls.html">the walls explained</a></li>
 </ul>
 </div>
