--- a/theWalls.html
+++ b/theWalls.html
@@ -13,7 +13,7 @@
 <h1>ATTACK ON TITAN</h1>
 <ul>
   <li><a href="index.html">Home</a></li>
-  <li><a href="resume.html">Resume</a></li>
+  <li><a href="homepage.html">weather</a></li>
   <li><a href="theWalls.html">the walls explained</a></li>
 
 </ul>
