--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <div class="bg-text">
 <h1>ATTACK ON TITAN</h1>
 <ul>
-  <li><a href="myWebsite.html">Home</a></li>
+  <li><a href="index.html">Home</a></li>
   <li><a href="homepage.html">weather</a></li>
   <li><a href="theWalls.html">the walls explained</a></li>
 </ul>
