--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <title>Astro Motion by TemplateMo</title>
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/slick.css" type="text/css" /> 
+    <link rel="stylesheet" href="css/slick.css" type="text/css" />
     <link rel="stylesheet" href="css/templatemo-style.css">
 <!--
-    
+
 TemplateMo 560 Astro Motion
 
 https://templatemo.com/tm-560-astro-motion
@@ -27,7 +27,7 @@ https://templatemo.com/tm-560-astro-motion
           <div class="col-xs-12">
             <div class="cd-slider-nav">
               <nav class="navbar navbar-expand-lg" id="tm-nav">
-                <a class="navbar-brand" href="#">Astro Motion</a>
+                <a class="navbar-brand" href="#">Kaz Kianoush</a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-supported-content" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
@@ -53,26 +53,33 @@ https://templatemo.com/tm-560-astro-motion
                   </div>
               </nav>
             </div>
-          </div>          
-        </div>        
-      </div>      
+          </div>
+        </div>
+      </div>
       <div class="container-fluid tm-content-container">
         <ul class="cd-hero-slider mb-0 py-5">
           <li class="px-3" data-page-no="1">
             <div class="page-width-1 page-left">
               <div class="d-flex position-relative tm-border-top tm-border-bottom intro-container">
                 <div class="intro-left tm-bg-dark">
-                  <h2 class="mb-4">Welcome to Astro Motion</h2>
+                  <h2 class="mb-4">Profile</h2>
                   <p class="mb-4">
-                    This HTML template has a motion video background loop which is provided by <a rel="sponsored" href="https://getfreepictures.com" target="_blank">Get Free Pictures</a>. This is
-                    one-page responsive layout for your websites. Feel
-                  free to use this for a commercial purpose. </p>
+                    Always looking into the vast unknown, striving to learn more.
+relevant experiences:
+-personal website, created and maintained by myself, API updated monthlv.
+-multiple personal projects, working with multiple files in java and python.
+- taken over 8 computer science courses over the span of 2 years studying in university.
+-brief experience tutoring friends for computer science courses
+-over 2 years of experience with OOP using ava
+-over 4 years of experience with Python, multiple libraries
+- over 8 months of experience with data structures and algorithms, 4 of those months being
+with (t-</p>
                   <p class="mb-0">
                   You are not permitted to redistribute this template on your Free CSS collection websites. Please <a rel="nofollow" href="https://templatemo.com/contact" target="_blank">contact us</a> for more information. </p>
                 </div>
                 <div class="intro-right">
-                  <img src="img/home-img-1.jpg" alt="Image" class="img-fluid intro-img-1">
-                  <img src="img/home-img-2.jpg" alt="Image" class="img-fluid intro-img-2">
+                  <img src="ubc.jpg" alt="Image" class="img-fluid intro-img-1">
+                  <img src="kaz.jpg" alt="Image" class="img-fluid intro-img-2">
                 </div>
                 <div class="circle intro-circle-1"></div>
                 <div class="circle intro-circle-2"></div>
@@ -80,11 +87,11 @@ https://templatemo.com/tm-560-astro-motion
                 <div class="circle intro-circle-4"></div>
               </div>
               <div class="text-center">
-                <a href="#0" data-page-no="2" class="btn btn-primary tm-intro-btn tm-page-link">
-                  View Gallery
+                <a href="#0" data-page-no="3" class="btn btn-primary tm-intro-btn tm-page-link">
+                  View Resume
                 </a>
-              </div>            
-            </div>            
+              </div>
+            </div>
           </li>
           <li data-page-no="2">
             <!-- Image Carousel -->
@@ -192,7 +199,7 @@ https://templatemo.com/tm-560-astro-motion
                   turpis, vestibulum pellentesque aliquam ultricies, finibus nec dui. Donec bibendum
                   enim mi, at tristique leo feugiat at. Thank you for visiting Template Mo.
                 </p>
-              </div>              
+              </div>
             </div>
           </li>
           <li data-page-no="4">
@@ -219,7 +226,7 @@ https://templatemo.com/tm-560-astro-motion
                     </div>
                   </form>
                 </div>
-                <div class="col-md-6 tm-contact-right">                  
+                <div class="col-md-6 tm-contact-right">
                   <p class="mb-4">
                     Integer erat turpis, vestibulum pellentesque aliquam
                     ultricies, finibus nec dui. Donec bibendum enim mi,
@@ -241,27 +248,21 @@ https://templatemo.com/tm-560-astro-motion
                 </div>
                 </div>
               </div>
-            </div>            
+            </div>
           </li>
         </ul>
     </div>
     <div class="container-fluid">
       <footer class="row mx-auto tm-footer">
-        <div class="col-md-6 px-0">
-          Copyright 2021 Astro Motion Company Limited. All rights reserved.
-        </div>
-        <div class="col-md-6 px-0 tm-footer-right">
-          Designed by <a rel="sponsored" href="https://templatemo.com" target="_blank" class="tm-link-white">TemplateMo</a>
-        </div>
       </footer>
     </div>
   </div>
   <!-- Preloader, https://ihatetomatoes.net/create-custom-preloading-screen/ -->
-  <div id="loader-wrapper">            
+  <div id="loader-wrapper">
     <div id="loader"></div>
     <div class="loader-section section-left"></div>
     <div class="loader-section section-right"></div>
-  </div>  
+  </div>
   <script src="js/jquery-3.5.1.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
   <script src="js/slick.js"></script>
