--- a/index.html
+++ b/index.html
@@ -38,17 +38,17 @@ https://templatemo.com/tm-560-astro-motion
                         <div class="circle"></div>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#0" data-no="2">Gallery</a>
+                        <a class="nav-link" href="Project2/homepage.html" data-no="2">WeatherBit API</a>
                         <div class="circle"></div>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#0" data-no="3">About</a>
+                        <a class="nav-link" href="#0" data-no="3">Resume</a>
                         <div class="circle"></div>
                       </li>
-                      <li class="nav-item">
+                      <!-- <li class="nav-item">
                         <a class="nav-link" href="#0" data-no="4">Contact</a>
                         <div class="circle"></div>
-                      </li>
+                      </li> -->
                     </ul>
                   </div>
               </nav>
@@ -64,18 +64,21 @@ https://templatemo.com/tm-560-astro-motion
                 <div class="intro-left tm-bg-dark">
                   <h2 class="mb-4">Profile</h2>
                   <p class="mb-4">
-                    Always looking into the vast unknown, striving to learn more.
-relevant experiences:
--personal website, created and maintained by myself, API updated monthlv.
+                  Welcome to my website :). Here I will be uploading my works, and a brief introduction of myself.
+                  Outside of anything Computer Science related, I enjoy playing games, such as FIFA and Chess. I also enjoy playing sports, such as Soccer and Basketball.
+                  <p></p>
+                  What I've done so far:
+                  <p></p>
+-personal website, created and maintained by myself, API updated monthly.
+<p></p>
 -multiple personal projects, working with multiple files in java and python.
-- taken over 8 computer science courses over the span of 2 years studying in university.
--brief experience tutoring friends for computer science courses
--over 2 years of experience with OOP using ava
--over 4 years of experience with Python, multiple libraries
-- over 8 months of experience with data structures and algorithms, 4 of those months being
-with (t-</p>
-                  <p class="mb-0">
-                  You are not permitted to redistribute this template on your Free CSS collection websites. Please <a rel="nofollow" href="https://templatemo.com/contact" target="_blank">contact us</a> for more information. </p>
+<p></p>
+-brief experience tutoring friends for computer science courses.
+<p></p>
+-over 2 years of experience with OOP using java.
+<p></p>
+-over 4 years of experience with Python, multiple libraries</p>
+
                 </div>
                 <div class="intro-right">
                   <img src="ubc.jpg" alt="Image" class="img-fluid intro-img-1">
