--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ https://templatemo.com/tm-560-astro-motion
                         <div class="circle"></div>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="Project2/homepage.html" data-no="2">WeatherBit API</a>
+                        <a class="nav-link" href="homepage.html" data-no="2">WeatherBit API</a>
                         <div class="circle"></div>
                       </li>
                       <li class="nav-item">
