--- a/homepage.html
+++ b/homepage.html
@@ -10,8 +10,12 @@
   <body>
     <div class="bg-image"></div>
 
+
     </video>
     <div class="dropdown">
+      <ul>
+        <li><a href="index.html">Home</a></li>
+      </ul>
       <video id="background-video" autoplay loop muted>
     <source  src="rain.mp4" type="video/mp4">
   </video>
