--- a/index.html
+++ b/index.html
@@ -4,18 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Astro Motion by TemplateMo</title>
+    <title>Kaz Kianoush</title>
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/slick.css" type="text/css" />
     <link rel="stylesheet" href="css/templatemo-style.css">
-<!--
 
-TemplateMo 560 Astro Motion
-
-https://templatemo.com/tm-560-astro-motion
-
--->
 </head>
 <body>
     <video autoplay muted loop id="bg-video">
