--- a/index.html
+++ b/index.html
@@ -64,13 +64,23 @@
                   <p></p>
                   What I've done so far:
                   <p></p>
--personal website, created and maintained by myself, API updated monthly.
+                 
+-Texi app:
+                    - worked with Kotlin as the base language of the app
+                    - used Firebase to store user info, and validate authentication
+                    - used Gradle to import external resources
+                    - used Dagger/Hilt for dependency injection
+                    - used MVVM architecture
+                    - used coroutines to asynchronously run procedures
+                    - used Room to create relational persistence
+                    - used RecyclerView for fast and smooth database->UI transfer of information
+-personal website, created and maintained by myself, API updated monthly
 <p></p>
--multiple personal projects, working with multiple files in java and python.
+-multiple personal projects, working with multiple files in java and python
 <p></p>
--brief experience tutoring friends for computer science courses.
+-brief experience tutoring friends for computer science courses
 <p></p>
--over 2 years of experience with OOP using java.
+-over 2 years of experience with OOP using java
 <p></p>
 -over 4 years of experience with Python, multiple libraries</p>
 
