--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                  
 -Texi app:
                     <p></p>
-                    - worked with Kotlin as the base language of the app
+                    <h2>- worked with Kotlin as the base language of the app</h2>
                     <p></p>
                     - used Firebase to store user info, and validate authentication
                     <p></p>
