--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
                   <p></p>
                   What I've done so far:
                   <p></p>
-                 
--Texi app:
+<div>                 
+<h2>-Texi app:</h2>
                     <p></p>
-                    <h2>- worked with Kotlin as the base language of the app</h2>
+                    - worked with Kotlin as the base language of the app
                     <p></p>
                     - used Firebase to store user info, and validate authentication
                     <p></p>
@@ -84,6 +84,7 @@
                     - used RecyclerView for fast and smooth database->UI transfer of information
                     <p></p>
                     <p></p>
+    </div>
 -personal website, created and maintained by myself, API updated monthly
 <p></p>
 -multiple personal projects, working with multiple files in java and python
