--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
                         <a class="nav-link" aria-current="page" href="#0" data-no="1">Home</a>
                         <div class="circle"></div>
                       </li>
-                      <li class="nav-item">
+<!--                       <li class="nav-item">
                         <a class="nav-link" href="#0" data-no="3">Resume</a>
                         <div class="circle"></div>
-                      </li>
+                      </li> -->
                       <li class="nav-item">
                         <a class="nav-link" href="homepage.html" data-no="2">WeatherBit API</a>
                         <div class="circle"></div>
