--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
 </head>
 <body>
-    <video autoplay muted loop id="bg-video">
-        <source src="video/gfp-astro-timelapse.mp4" type="video/mp4">
-    </video>
+<!--     <video autoplay muted loop id="bg-video"> -->
+<!--         <source src="video/gfp-astro-timelapse.mp4" type="video/mp4"> -->
+<!--     </video> -->
     <div class="page-container">
       <div class="container-fluid">
         <div class="row">
@@ -97,8 +97,8 @@
 
                 </div>
                 <div class="intro-right">
-                  <img src="ubc.jpg" alt="Image" class="img-fluid intro-img-1">
-                  <img src="kaz.jpg" alt="Image" class="img-fluid intro-img-2">
+<!--                   <img src="ubc.jpg" alt="Image" class="img-fluid intro-img-1">
+                  <img src="kaz.jpg" alt="Image" class="img-fluid intro-img-2"> -->
                 </div>
                 <div class="circle intro-circle-1"></div>
                 <div class="circle intro-circle-2"></div>
